2008-03-21  Andreas Kirschbaum

	* Do not crash when connecting to an outdated server.

2008-03-19  Andreas Kirschbaum

	* ragnorok: Make the "Chat" tab (somewhat) work on branch servers.

2008-03-12  Andreas Kirschbaum

	* Forget inventory and ground information when server connection
	breaks.

	* ragnorok: Display items in correct order in inventory view.

2008-01-29  Andreas Kirschbaum

	* ragnorok: Display weight/weight limit in inventory dialog.

2008-01-21  Andreas Kirschbaum

	* ragnorok: Add tabs ("All", "Important", "Chat") to message
	dialog. All contains all messages, Important omits combat related
	messages, Chat includes communication only.

2008-01-20  Andreas Kirschbaum

	* Fix book dialogs: correctly display long text lines and
	interpret media tags.

	* Display book titles.

	* Fix image cache: re-request changed faces from the server.

2008-01-19  Andreas Kirschbaum

	* Add scroll bar to message window.

	* Support per-character key bindings: bind -c/unbind -c.

	* Make unbind command work.

2008-01-16  Andreas Kirschbaum

	* Show correct weapon speed when connecting to recent Crossfire
	servers.

2008-01-15  Andreas Kirschbaum

	* Do not crash when applying a Glowing Crystal.

2008-01-12  Andreas Kirschbaum

	* Suppress spurious "level up" sound at re-login.

	* Correctly display stats after re-login.

	* Use "ragnorok" as default skin.

2008-01-09  Andreas Kirschbaum

	* All to bind a list of commands to a key.

2008-01-08  Andreas Kirschbaum

	* Play a sound when character levels up.

2008-01-06  Andreas Kirschbaum

	* Fix crash when entering a long command line.

	* ragnorok: Highlight the readied skill in skills dialog.

	* Do not crash when identifying items.

	* Fix display glitches when scrolling the map view. Now the
	character is always displayed in the center of the screen.

2008-01-05  Andreas Kirschbaum

	* Try harder to fall back to windowed mode if either full-screen
	mode or display mode change is not supported. Remove options -F