@@ -1,5 +1,7 @@
 2008-03-21  Andreas Kirschbaum
 
+	* Merge duplicate messages in message window.
+
 	* Do not crash when connecting to an outdated server.
 
 2008-03-19  Andreas Kirschbaum
